@@ -23,6 +23,7 @@ Here is a list of topics:
 - @ref page_collect
 - @ref page_custom_attributes
 - @ref page_animations
+- @ref page_dialog
 - @ref plugin_citylife
 - @ref type_index
 - @ref TYPE_BUILDER
