@@ -1,7 +1,7 @@
 
 noinst_HEADERS = \
 commands.h     libproto.h     sounds.h	     attack.h       config.h \
-living.h       player.h       define.h       loader.h       race.h \
+living.h       player.h       define.h       dialog.h       loader.h       race.h \
 material.h     spells.h       face.h         logger.h       re-cmp.h \
 sproto.h       artifact.h     map.h          recipe.h \
 treasure.h     global.h       newclient.h    path.h         shstr.h \
